<resources>
    <string name="app_name">SettleAccounts</string>
    <string name="go_to_settle">정산하기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove">삭제</string>
    <string name="name">이름</string>
    <string name="name_set_complete">인원 이름 설정 완료</string>
    <string name="active_name_set_complete">활동 이름 설정 완료</string>
    <string name="settle_accounts_button">정산하기</string>
    <string name="bank_name">은행 이름</string>
    <string name="account_number">계좌번호</string>
    <string name="set_account_number_complete">입금 계좌 설정 완료</string>
    <string name="set_settle_accounts">정산 세팅하기</string>
    <string name="all_select">모두 선택</string>
    <string name="to_be_settled">정산할 비용</string>
    <string name="settle_complete">정산 세팅 완료</string>
</resources>