<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="입급할 계좌를 입력해주세요"
                android:gravity="center"
                android:layout_marginBottom="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:hint="@string/bank_name"
                android:layout_margin="8dp"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bank_name_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType = "textNoSuggestions"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="260dp"
                android:layout_height="60dp"
                android:hint="@string/account_number"
                android:layout_margin="8dp"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/account_number_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType = "numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/account_set_complete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_main_button"
            android:text="@string/set_account_number_complete"
            android:textSize="24sp"
            android:padding="20dp"
            android:textColor="#ffffff" />
    </LinearLayout>
</layout>
