<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="dialog"
            type="com.example.settleaccounts.dialog.SetPeopleAndPriceDialog" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5"
        android:orientation="vertical"
        android:background="@drawable/shape_activity_layout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/select_all_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_select"
                android:padding="15dp"
                android:layout_gravity="center" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/people_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{dialog.setActivityCostText()}"
                android:layout_marginBottom="20dp"
                android:textSize="24sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:hint="@string/to_be_settled"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType = "number" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/set_complete_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/shape_main_button"
            android:text="@string/settle_complete"
            android:textSize="24sp"
            android:padding="20dp"
            android:textColor="#ffffff"
            android:layout_weight="1"
            android:onClick="@{() -> dialog.completeSet()}"/>
    </LinearLayout>

</layout>
